[package]
name = "hidden_friends_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

dotenv = "0.15.0"
fast_vk = { version = "0.5", features = ["thisvk"] }
vk_method = "0.2.1"
futures = "0.3.24"
thisvk = "0.2"
thiserror = "1.0.37"
async-recursion = "1.0.0"
