[package]
name = "spybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"

dotenv = "0.15.0"
vk_executive = { version = "0.8.5", features = ["thisvk"], path = "../vk_executive" }
vk_method = "0.2.1"
futures = "0.3.24"
thisvk = "0.2"
thiserror = "1.0.37"
async-recursion = "1.0.0"
anyhow = "1.0"
